--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^7.0.1",
+    "@cyhnkckali/vue3-color-picker": "^2.0.7",
     "ant-design-vue": "^4.2.6",
+    "dayjs": "^1.11.13",
+    "jspdf": "^2.5.2",
     "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5",
